--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -21,6 +21,7 @@
         }
         img{
             min-width: 100%;
+            max-height: 333px;
         }
         a{
             color: #6dff01;
