--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -5,6 +5,9 @@
 }
 
 @media (max-width: 736px) {
+	#top-bar{
+		display: none;
+	}
 	.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover{
 		background: transparent;
 	}
